# Chimoney-SDK-Challenge-Covenant-University

./: LICENSE  README.md
.github/: NewSDK.yml  config.yml  feature.yml
.github/workflows/: dotnet.yml
SDK Submissions/Chimoney/: ChimoneyDotNet.sln
SDK Submissions/Chimoney-Java/: .gitignore  README.md
SDK Submissions/Chimoney-Java/chimoney/: pom.xml
SDK Submissions/Chimoney/Tests/: ChimonyDotNet.IntegrationTest.csproj
SDK Submissions/ChimoneyDotNet/: ChimoneyDotNet.sln  README.md
SDK Submissions/ChimoneyDotNet/APIService/: Chimoney.cs  ChimoneyAccount.cs  ChimoneyInfo.cs  ChimoneyPayment.cs
SDK Submissions/ChimoneyDotNet/Chimoney.Net/: Chimoney.NET.csproj
SDK Submissions/ChimoneyDotNet/ChimoneyDotNet/: ChimoneyDotNet.csproj
SDK Submissions/TestingWrapper/: Program.cs  Sample.csproj
SDK Submissions/Tests/: Usings.cs  WrapperIntegrationTests.cs
SDK Submissions/chimoney_rust_sdk/: Cargo.toml
SDK Submissions/chimoney_rust_sdk/src/: api_client.rs  lib.rs  models.rs
SDK Submissions/chimoney_rust_sdk/src/account/: account.rs  models.rs
SDK Submissions/chimoney_rust_sdk/src/beneficiary/: beneficiary.rs  mod.rs
SDK Submissions/chimoney_rust_sdk/src/core/: api_client.rs  models.rs
SDK Submissions/chimoney_rust_sdk/src/info/: info.rs
SDK Submissions/chimoney_rust_sdk/src/payment/: payment.rs
SDK Submissions/chimoney_rust_sdk/src/payouts/: mod.rs  payouts.rs
SDK Submissions/chimoney_rust_sdk/src/redeem/: redeem.rs
SDK Submissions/chimoney_rust_sdk/src/subaccount/: mod.rs  subaccount.rs
SDK Submissions/chimoney_rust_sdk/src/wallet/: wallet.rs
(+136 files in other folders)
