[package]
name = "chimoney_rust_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

actix-web = "^4.0"

rocket = "^0.5"

# Asynchronous operations with Tokio
tokio = { version = "^1", features = ["full"] }

# Other utility libraries as needed
log = "^0.4"
